<resources>
    <string name="app_name">FilmParrot</string>
    <string name="title_activity_profile">Mi perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Image descriptions. -->
    <string name="logo_description">El logo de FilmParrot. Un papagayo sobre letras negras.</string>

    <string name="searchLabel">Buscar</string>
    <string name="searchHint">Buscar elemento</string>

    <!-- Menú lateral. -->
    <string name="m_login">Iniciar sesión</string>
    <string name="m_logout">Cerrar sesión</string>
    <string name="m_viewprofile">Ver perfil</string>
    <string name="m_signin">Registrarse</string>
    <string name="m_userzone">Zona de usuario</string>
    <string name="m_home">Inicio</string>
    <string name="m_releases">Estrenos</string>
    <string name="m_search">Buscar</string>
    <string name="m_lists">Listas</string>
    <string name="m_new_element">Nuevo elemento</string>

    <!-- LoginFragment. -->
    <string name="l_username">Nombre de usuario</string>
    <string name="l_password">Contraseña</string>
    <string name="l_confirmpassword">Repita la contraseña</string>
    <string name="l_login">INICIAR SESIÓN</string>
    <string name="l_signin">REGISTRARSE</string>

    <!-- ElementFormFragment. -->
    <string name="ef_name">Nombre:</string>
    <string name="ef_country">País:</string>
    <string name="ef_description">Descripción:</string>
    <string name="ef_descriptionHint">Introduzca una descripción o sinopsis</string>
    <string name="ef_send">ENVIAR</string>

    <!-- FilmFormFragment. -->
    <string name="ff_duration">Duración:</string>
    <string name="ff_genre">Género:</string>
    <string name="ff_year">Año:</string>
    <string name="ff_producer">Productora:</string>
    <string name="ff_bso">BSO:</string>
    <string name="ff_director">Director/es:</string>
    <string name="ff_actor">Actor/es:</string>

    <!-- BsoFormFragment. -->
    <string name="bf_year">Año:</string>
    <string name="bf_compositor">Compositor:</string>

    <!-- PersonFormFragment. -->
    <string name="pf_surname">Apellidos:</string>
    <string name="pf_birthdate">Fecha ncto:</string>
    <string name="pf_director">Director:</string>
    <string name="pf_actor">Actor:</string>

    <!-- SerieFormFragment. -->
    <string name="sf_startyear">Año comienzo:</string>
    <string name="sf_endyear">Año fin:</string>
    <string name="sf_season">Temporadas:</string>
    <string name="sf_chapter">Capítulos:</string>

    <string name="title_activity_splash_screen">Cargando datos…</string>
    <string name="app_logo">Logo de la aplicación.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="votos_por_tipo">Votos por tipo</string>
    <string name="votos_por_pa_ses">Votos por países</string>
    <string name="descripci_n">Descripción</string>
    <string name="votar">VOTAR</string>

    <!-- UserListsFragment. -->
    <string name="undo">Deshacer</string>
    <string name="undoall">Deshacer todo</string>

    <!-- ProfileFragment. -->
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar nueva contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="datos_de_usuario">Datos de usuario</string>
    <string name="l_confirmchangepassword">Confirmar cambio</string>
    <string name="bienvenido_a_filmparrot">¡Bienvenido a FilmParrot!</string>
    <string name="filmparrot_description">FilmParrot es tu aplicación para comentar todo lo relacionado con el cine. ¡No te olvides de registrarte para compartir tus impresiones con otros usuarios!</string>
    <string name="entendido">ENTENDIDO</string>

</resources>
