<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/bird_gray"
            android:title="@string/m_home" />
        <item
            android:id="@+id/releases_item"
            android:icon="@drawable/star_gray"
            android:title="@string/m_releases" />
        <item
            android:id="@+id/search_item"
            android:icon="@drawable/search_gray"
            android:title="@string/m_search" />
        <item
            android:id="@+id/lists_item"
            android:icon="@drawable/list_gray"
            android:title="@string/m_lists" />
    </group>

    <item android:title="@string/m_userzone">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/login_item"
                    android:icon="@drawable/login"
                    android:title="@string/m_login" />
                <item
                    android:id="@+id/signin_item"
                    android:icon="@drawable/signin"
                    android:title="@string/m_signin" />
                <item
                    android:id="@+id/viewprofile_item"
                    android:icon="@drawable/view"
                    android:title="@string/m_viewprofile"
                    android:checkable="false"/>
                <item
                    android:id="@+id/logout_item"
                    android:icon="@drawable/logout"
                    android:title="@string/m_logout"
                    android:checkable="false"/>
            </group>
        </menu>
    </item>

</menu>
