<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ef_name"
            android:id="@+id/nameLabel"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"

            android:layout_marginTop="30dp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="text"
            android:id="@+id/nameText"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"

            android:background="#ffffff"
            android:layout_alignTop="@+id/nameLabel"
            android:layout_toEndOf="@+id/nameLabel"
            android:layout_toRightOf="@+id/nameLabel"

            android:singleLine="true"
            android:maxLength="40"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ef_country"
            android:id="@+id/countryLabel"
            android:layout_below="@+id/nameText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"

            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="30dp"
            android:id="@+id/editText"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"

            android:background="#ffffff"
            android:layout_alignTop="@+id/countryLabel"
            android:layout_toEndOf="@+id/nameLabel"
            android:layout_toRightOf="@+id/nameLabel"

            android:singleLine="true"
            android:maxLength="15"
            android:textAlignment="center"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ef_description"
            android:id="@+id/descriptionLabel"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/descriptionText"
            android:background="#ffffff"
            android:layout_below="@+id/descriptionLabel"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"

            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/editText"
            android:layout_alignRight="@+id/editText"

            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="top|start"
            android:maxLength="200"
            android:hint="@string/ef_descriptionHint"
            android:minHeight="70dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:padding="5dp" />

        <RelativeLayout
            android:id="@+id/spec_element_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionText" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/ef_send"
            android:id="@+id/enviar_button"
            android:background="@android:color/holo_blue_dark"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"



            android:layout_below="@+id/birthdateText"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pf_surname"
            android:id="@+id/surnameLabel"
            android:layout_marginTop="10dp"

            android:layout_below="@+id/descriptionText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"


            android:inputType="number"
            android:ems="10"
            android:id="@+id/YearText"
            android:background="#ffffff"


            android:singleLine="true"
            android:maxLength="4"
            android:textAlignment="center"
            android:padding="5dp"
            android:layout_alignTop="@+id/surnameLabel"
            android:layout_alignLeft="@+id/birthdateText"
            android:layout_alignStart="@+id/birthdateText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"

            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pf_birthdate"
            android:id="@+id/birthDateLabel"
            android:layout_below="@+id/YearText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="date"
            android:ems="10"

            android:id="@+id/birthdateText"
            android:background="#ffffff"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/birthDateLabel"
            android:layout_toRightOf="@+id/descriptionLabel"
            android:layout_toEndOf="@+id/descriptionLabel" />

    </RelativeLayout>
</ScrollView>
