<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FilmViewFragment">

    <TextView
        android:id="@+id/durationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/ff_duration"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/durationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/durationLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/durationLabel"
        android:layout_marginTop="5dp"
        android:background="#D3D3D3"/>

    <TextView
        android:id="@+id/genreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/durationLabel"
        android:layout_marginTop="10dp"
        android:text="@string/ff_genre"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/genreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/genreLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/genreLabel"
        android:layout_marginTop="5dp"
        android:background="#D3D3D3"/>

    <TextView
        android:id="@+id/yearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/genreLabel"
        android:layout_marginTop="10dp"
        android:text="@string/ff_year"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/yearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/yearLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/yearLabel"
        android:layout_marginTop="5dp"
        android:background="#D3D3D3"/>

    <TextView
        android:id="@+id/BsoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/yearLabel"
        android:layout_marginTop="10dp"
        android:text="@string/ff_bso"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/BsoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/BsoLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/BsoLabel"
        android:background="#D3D3D3"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/directorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/BsoLabel"
        android:layout_marginTop="10dp"
        android:text="@string/ff_director"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/directorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/directorLabel"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/directorText"
        android:background="#D3D3D3"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/actorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/directorText"
        android:layout_marginTop="10dp"
        android:text="@string/ff_actor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/actorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/actorLabel"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="18sp" />
</RelativeLayout>
